fixing spacing, video

--- a/Assets/styles/experiments.css
+++ b/Assets/styles/experiments.css
@@ -183,7 +183,6 @@ main {
   canvas {
     transform: scale(0.7);
     width: 300px;
-    height: 100;
   }
   section#codingStyles pre {
     width: fit-content;
@@ -228,7 +227,7 @@ main {
     margin-left: 2%;
     margin-right: 2%;
     overflow-wrap: break-word;
-    white-space: anywhere;
+    white-space: normal;
   }
   
 
